istio-c/isito-circutbreaker/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: my-app
          image: chaitu1812/nginx-error  # or your custom app image
          ports:
            - containerPort: 80



---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: test
spec:
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
