istio-c/isito-circutbreaker/ds.yaml
#apiVersion: networking.istio.io/v1beta1
#kind: DestinationRule
#metadata:
#  name: nginx-ds
#  namespace: test
#spec:
#  host: my-app-service.test.svc.cluster.local
#  trafficPolicy:
#    outlierDetection:
#      consecutive5xxErrors: 2         # Open circuit after 3 consecutive 5xx errors
#      interval: 5s                     # Check every 5 seconds
#      baseEjectionTime: 30s            # Time the circuit remains open (30 seconds)
#      maxEjectionPercent: 100

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-ds
  namespace: test

spec:
  host: my-app-service.test.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 3m
      maxEjectionPercent: 50
