istio-c/isito-circutbreaker/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: test
spec:
  hosts:
    - my-app-service.test.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 10s
      route:
        - destination:
            host: my-app-service.test.svc.cluster.local
            subset: v1
